fix(Styles): message styling; align navbar hover with message grey (vs. previous brownish-gray).

--- a/director/assets/sass/overrides/bulma/_message.sass
+++ b/director/assets/sass/overrides/bulma/_message.sass
@@ -4,6 +4,12 @@
 
 .message
     background-color: #fafafa !important
+    border-left: 4px solid $success
+
+.message-body
+    padding: 0rem 1.5rem 1rem    
 
 .message-header
     +uppercase-heading()
+    padding: 1rem 1.5rem .75rem
+    background-color: #fafafa !important
