--- a/director/assets/sass/overrides/bulma/_navbar.sass
+++ b/director/assets/sass/overrides/bulma/_navbar.sass
@@ -25,6 +25,9 @@
             padding: 1rem
             color: #4a4a4a
 
+            &:hover
+                background: #fafafa
+
             &.no-hover
                 &:hover
                     &:before
